Fixed responsivness and z-index for cancel dialog

--- a/frontend/src/app/booking/payment/payment.component.css
+++ b/frontend/src/app/booking/payment/payment.component.css
@@ -40,6 +40,7 @@ a{
 
 .row {
   margin-bottom: 20px;
+  margin-right: -65px;
 }
 
 .invoice-text {
